--- a/api-service/package.json
+++ b/api-service/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^7.14.0",
+    "pg": "^8.7.1",
+    "sequelize": "^6.6.5",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
